--- a/css/style.css
+++ b/css/style.css
@@ -17,17 +17,33 @@ body {
   font-size: var(--font-size);
   background-color: var(--background-color);
 }
+h1,
+h2,
+h3,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+section {
+  padding: 94px 0;
+}
+img {
+  display: block;
+}
 
 /*=============COMPONENT=============*/
 .conteiner {
   width: 1230px;
   padding-left: 15px;
   padding-right: 15px;
+  margin: 0, auto;
 }
 .list {
-  padding-top: 0;
-  padding-bottom: 0;
-  margin: 0;
   list-style: none;
 }
 .links {
@@ -56,10 +72,11 @@ body {
 .cont-head {
   display: flex;
   align-items: center;
+  border-bottom: 1px solid #ececec;
 }
 .navigation {
   display: flex;
-  margin-left: 93px;
+  align-items: center;
 }
 .logo {
   font-family: Raleway, sans-serif;
@@ -74,27 +91,33 @@ body {
 }
 .navigation-list {
   display: flex;
+  margin-left: 93px;
 }
-.navigation-list .navigation-item + .navigation-item {
-  margin-left: 50px;
+.navigation-item {
+  margin-right: 50px;
+}
+.navigation-item:last-child {
+  margin-right: 0;
 }
 .navigation-list .links {
-  display: block;
+  display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
-  /* outline: 2px solid red; */
 }
 .link-list {
   display: flex;
+  margin-left: auto;
 }
 .link-list .con-link {
-  display: block;
+  display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
-  /* outline: 2px solid red; */
 }
-.link-list .item + .item {
-  margin-left: 30px;
+.link-list .item {
+  margin-right: 50px;
+}
+.link-list .item:last-child {
+  margin-right: 0;
 }
 .con-link {
   color: var(--color-text);
@@ -105,9 +128,9 @@ body {
 .hero {
   background-color: #2f303a;
   text-align: center;
+  padding-top: 0;
 }
 .hero-title {
-  margin-top: 0;
   margin-bottom: 30px;
 
   font-weight: 900;
@@ -130,6 +153,7 @@ body {
   background-color: var(--color-link);
 
   cursor: pointer;
+
   padding: 10px 32px;
   border-radius: 4px;
   border: 1px solid transparent;
@@ -140,9 +164,17 @@ body {
 }
 /*=============END HERO=============*/
 /*=============RULES=============*/
-
+.rules-list {
+  display: flex;
+}
+.rules-item {
+  width: 279px;
+  margin-right: 21px;
+}
+.rules-item:last-child {
+  margin-right: 0;
+}
 .rules-title {
-  margin-top: 0;
   margin-bottom: 10px;
 
   font-size: 14px;
@@ -159,32 +191,50 @@ body {
 /*=============WHAT WE DO=============*/
 
 .what-title {
-  margin-top: 0;
   margin-bottom: 50px;
   text-align: center;
+}
+.what-list {
+  display: flex;
+  margin-top: -30px;
+  margin-left: -30px;
+}
+.what-item {
+  margin-top: 30px;
+  margin-left: 30px;
 }
 
 /*=============END WHAT WE DO=============*/
 /*=============OUR TEAM=============*/
 .our-team {
-  padding-top: 94px;
-  padding-bottom: 94px;
   background-color: var(--background);
-}
-.our-team-intem {
-  background-color: var(--background-color);
+  margin-bottom: 0;
+  padding-bottom: 94px;
 }
 .our-team-title {
-  margin-top: 0;
   margin-bottom: 50px;
   text-align: center;
 }
+.our-team-list {
+  display: flex;
+  margin-top: -30px;
+  margin-left: -30px;
+}
+.our-team-item {
+  background-color: var(--background-color);
+  margin-top: 30px;
+  margin-left: 30px;
+}
+
 .foto {
   margin-bottom: 30px;
 }
+.our-team-box {
+  text-align: center;
+  padding-bottom: 30px;
+}
 
 .our-team-name {
-  margin-top: 0;
   margin-bottom: 10px;
 
   font-weight: 500;
@@ -192,13 +242,24 @@ body {
   line-height: 1.18;
 }
 .our-team-work {
-  margin-top: 0;
-  margin-bottom: 0;
   font-size: 16px;
   line-height: 1.18;
 }
 /*=============END OUR TEAM=============*/
 /*=============PORTFOLIO=============*/
+.filters {
+  text-align: center;
+}
+.filters-list {
+  display: flex;
+  margin-bottom: 50px;
+}
+.filters-item {
+  margin-right: 8px;
+}
+.filters-item:last-child {
+  margin-right: 0;
+}
 .filters-btn {
   font-weight: 500;
   font-size: 16px;
@@ -219,14 +280,28 @@ body {
   color: var(--background-color);
   background-color: var(--color-link);
 }
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-right: -30px;
+}
+.gallery-item {
+  margin-top: 30px;
+  margin-right: 30px;
+}
+.gallery-box {
+  border: 1px solid #eeeeee;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: left;
+}
+.poster {
+}
 .galery-link {
   text-decoration: none;
 }
-.poster {
-  margin-bottom: 20px;
-}
 .gallery-title {
-  margin-top: 0;
   margin-bottom: 4px;
 
   font-size: 18px;
@@ -234,8 +309,6 @@ body {
   letter-spacing: 0.06em;
 }
 .gallery-about {
-  margin-top: 0;
-  margin-bottom: 0;
   font-size: 16px;
   line-height: 1.87;
   color: #757575;
