--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ ul {
   padding-left: 0;
 }
 section {
-  padding: 94px 0;
+  padding-top: 94px;
 }
 img {
   display: block;
@@ -38,13 +38,16 @@ img {
 header {
   border-bottom: 1px solid #ececec;
 }
+footer {
+  background-color: #2f303a;
+}
 
 /*=============COMPONENT=============*/
 .conteiner {
-  width: 1230px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  margin: 0, auto;
+  margin: 0 auto;
 }
 .list {
   list-style: none;
@@ -69,6 +72,20 @@ header {
   font-size: 36px;
   line-height: 1.16;
   color: var(--color-title);
+  text-align: center;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 /*=============END COMPONENT=============*/
 /*=============HEADER=============*/
@@ -130,17 +147,16 @@ header {
 .hero {
   background-color: #2f303a;
   text-align: center;
-  padding-top: 0;
+  padding: 200px 0;
 }
 .hero-title {
-  margin-bottom: 30px;
-
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+
+  margin-bottom: 30px;
 
   color: var(--color-text-two);
 }
@@ -170,8 +186,8 @@ header {
   display: flex;
 }
 .rules-item {
-  width: 279px;
-  margin-right: 21px;
+  width: 270px;
+  margin-right: 30px;
 }
 .rules-item:last-child {
   margin-right: 0;
@@ -194,7 +210,6 @@ header {
 
 .what-title {
   margin-bottom: 50px;
-  text-align: center;
 }
 .what-list {
   display: flex;
@@ -215,7 +230,6 @@ header {
 }
 .our-team-title {
   margin-bottom: 50px;
-  text-align: center;
 }
 .our-team-list {
   display: flex;
@@ -226,14 +240,14 @@ header {
   background-color: var(--background-color);
   margin-top: 30px;
   margin-left: 30px;
+  width: 270px;
 }
 
 .foto {
-  margin-bottom: 30px;
 }
 .our-team-box {
   text-align: center;
-  padding-bottom: 30px;
+  padding: 30px;
 }
 
 .our-team-name {
@@ -250,11 +264,11 @@ header {
 /*=============END OUR TEAM=============*/
 /*=============PORTFOLIO=============*/
 .filters {
-  text-align: center;
 }
 .filters-list {
   display: flex;
   margin-bottom: 50px;
+  justify-content: center;
 }
 .filters-item {
   margin-right: 8px;
@@ -291,11 +305,12 @@ header {
 .gallery-item {
   margin-top: 30px;
   margin-right: 30px;
+  width: 370px;
 }
 .gallery-box {
   border: 1px solid #eeeeee;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  border-top: 0;
+  padding: 20px 24px;
   text-align: left;
 }
 .poster {
@@ -309,6 +324,7 @@ header {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  text-align: left;
 }
 .gallery-about {
   font-size: 16px;
@@ -318,15 +334,13 @@ header {
 /*=============END PORTFOLIO=============*/
 /*=============FOOTER=============*/
 .basement {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #2f303a;
+  padding: 60px 0;
 }
 .basement-logo {
-  margin-bottom: 20px;
   color: var(--color-text-two);
 }
 .ft-adres {
+  margin-top: 20px;
   font-style: normal;
 }
 .adres {
